// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`left paddle should move down if S is down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={250}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={250}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`left paddle should move up if W is down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={250}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={250}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`leftPaddle Y coordinate should stay the same if lower limit is reached 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={500}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={500}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 500,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={500}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={500}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 500,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`leftPaddle Y coordinate should stay the same if upper limit is reached 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={0}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={0}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={0}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={0}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`nothing should happen if any other key is down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={250}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={250}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`should render without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={250}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={250}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`unknown key downs and ups should be ignored 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.div
        height={1000}
        width={1500}
      >
        <styled.div
          color="#fff"
          height={500}
          id="left-paddle"
          width={30}
          x={100}
          y={250}
        />
        <styled.div
          color="#fff"
          height={500}
          id="right-paddle"
          width={30}
          x={1340}
          y={250}
        />
      </styled.div>,
      "innerRef": [Function],
      "onKeyDown": [Function],
      "onKeyUp": [Function],
      "tabIndex": "0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />,
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />,
        ],
        "height": 1000,
        "width": 1500,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "left-paddle",
            "width": 30,
            "x": 100,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "color": "#fff",
            "height": 500,
            "id": "right-paddle",
            "width": 30,
            "x": 1340,
            "y": 250,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.div
          height={1000}
          width={1500}
        >
          <styled.div
            color="#fff"
            height={500}
            id="left-paddle"
            width={30}
            x={100}
            y={250}
          />
          <styled.div
            color="#fff"
            height={500}
            id="right-paddle"
            width={30}
            x={1340}
            y={250}
          />
        </styled.div>,
        "innerRef": [Function],
        "onKeyDown": [Function],
        "onKeyUp": [Function],
        "tabIndex": "0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              color="#fff"
              height={500}
              id="left-paddle"
              width={30}
              x={100}
              y={250}
            />,
            <styled.div
              color="#fff"
              height={500}
              id="right-paddle"
              width={30}
              x={1340}
              y={250}
            />,
          ],
          "height": 1000,
          "width": 1500,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "left-paddle",
              "width": 30,
              "x": 100,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "color": "#fff",
              "height": 500,
              "id": "right-paddle",
              "width": 30,
              "x": 1340,
              "y": 250,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
